<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="64dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_iccard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="top"
        android:text="@string/tv_iccard_tips" />

    <Button
        android:id="@+id/btn_iccard_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:onClick="icCardRead"
        android:text="@string/btn_iccard_read" />

    <Button
        android:id="@+id/btn_iccard_write"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:onClick="icCardWrite"
        android:text="@string/btn_iccard_write" />

    <Button
        android:id="@+id/btn_iccard_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:onClick="icCardReset"
        android:text="@string/btn_iccard_reset" />
</LinearLayout>