<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">


        <Switch
            android:id="@+id/switch_track1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/enable_track1"
            android:textOff="@string/close"
            android:textOn="@string/open" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <NumberPicker
                android:id="@+id/numPicker1_len"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/tv_offset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/numPicker1_len"
                android:text="@string/len" />

            <NumberPicker
                android:id="@+id/numPicker1_offset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/tv_offset" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/numPicker1_offset"
                android:text="@string/offset" />
        </RelativeLayout>


        <Switch
            android:id="@+id/switch_track2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/enable_track2"
            android:textOff="@string/close"
            android:textOn="@string/open" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <NumberPicker
                android:id="@+id/numPicker2_len"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/tv_offset2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/numPicker2_len"
                android:text="@string/len" />

            <NumberPicker
                android:id="@+id/numPicker2_offset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/tv_offset2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/numPicker2_offset"
                android:text="@string/offset" />
        </RelativeLayout>

        <Switch
            android:id="@+id/switch_track3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:text="@string/enable_track3"
            android:textOff="@string/close"
            android:textOn="@string/open" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <NumberPicker
                android:id="@+id/numPicker3_len"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true" />

            <TextView
                android:id="@+id/tv_offset3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/numPicker3_len"
                android:text="@string/len" />

            <NumberPicker
                android:id="@+id/numPicker3_offset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@id/tv_offset3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/numPicker3_offset"
                android:text="@string/offset" />
        </RelativeLayout>
    </LinearLayout>
</ScrollView>